--- a/chat.html
+++ b/chat.html
@@ -14,6 +14,7 @@
     <div class="main-block">
       <div class="configuration-wrapper">
         <button class="btn-settings">Настройки</button>
+        <p class="companion-name"></p>
         <button class="btn-exit">Выйти</button>
       </div>
       <div class="message-window">
@@ -21,15 +22,17 @@
           <div class="my_message-block">
             <div class="my_message-wrapper delivered-message_color">
               <span class="my_message_view"></span>
-              <p class="time_message">18:45</p>
+              <p class="time-my-message"></p>
             </div>
           </div>
         </template>
         <div class="other_message-block">
-          <div class="other_message-wrapper delivered-message_color">
-            <span>очень длинное сообщение пользователя емае, капец блин</span>
-            <p class="time-message">18:45</p>
-          </div>
+          <template id="template_other_message">
+            <div class="other_message-wrapper delivered-message_color">
+              <span class="other_message_view"></span>
+              <p class="time-message"></p>
+            </div>
+          </template>
         </div>
       </div>
       <div class="input_wrapper">
@@ -38,60 +41,60 @@
           <button class="send_message">→</button>
         </form>
       </div>
-      <div class="allPopup">
-      <div class="settings_wrapper">
-        <div class="block-settings">
-          <div class="wrapper_settings">
-            <div class="settings">Настройки</div>
-            <button class="close-window" id="settings-btn">x</button>
-          </div>
-          <div class="name_in_chat">Имя в чате</div>
-          <div class="name-select_wrapper">
-            <form class="settings-form">
-            <input type="text" class="name_input" id="change-name">
-            <button class="btn_name_in_chat">→</button>
-            </form>
-            <p class="result-message"></p>
-            <p class="user-name-now"></p>
-          </div>
-        </div>
-      </div>
-      <div class="authorization_wrapper">
-        <div class="block-authorization">
-          <div class="wrapper_authorization">
-            <div class="authorization">Авторизация</div>
-            <button class="close-window" id="authorization-btn">x</button>
-          </div>
-          <div class="name_in_chat">Почта:</div>
-          <div class="name-select_wrapper">
-            <form class="authorization-form">
-            <input type="email" class="name_input" id="input-for-mail">
-            <button class="btn_name_in_chat" id="btn-authorization">Получить код</button>
-            </form>
+        <div class="settings_wrapper">
+          <div class="block-settings">
+            <div class="wrapper_settings">
+              <div class="settings">Настройки</div>
+              <button class="close-window" id="settings-btn">x</button>
+            </div>
+            <div class="name_in_chat">Имя в чате</div>
+            <div class="name-select_wrapper">
+              <form class="settings-form">
+                <input type="text" class="name_input" id="change-name">
+                <button class="btn_name_in_chat">→</button>
+              </form>
+              <p class="result-message"></p>
+              <p class="user-name-now"></p>
             </div>
           </div>
         </div>
-      </div>
+        <div class="authorization_wrapper">
+          <div class="block-authorization">
+            <div class="wrapper_authorization">
+              <div class="authorization">Авторизация</div>
+              <!-- <button class="close-window" id="authorization-btn">x</button> -->
+            </div>
+            <div class="name_in_chat">Почта:</div>
+            <div class="name-select_wrapper">
+              <form class="authorization-form">
+                <input type="email" class="name_input" id="input-for-mail">
+                <button class="btn-get-code">Получить код</button>
+              </form>
+              <button class="btn-get-code">Вести код</button>
+            </div>
+          </div>
+        </div>
       <div class="confirmation_wrapper">
         <div class="block-confirmation">
           <div class="wrapper_confirmation">
             <div class="confirmation">Подтверждение</div>
-            <button class="close-window" id="confirmation-btn">x</button>
+            <!-- <button class="close-window" id="confirmation-btn">x</button> -->
           </div>
           <div class="name_in_chat">Код:</div>
           <div class="name-select_wrapper">
-            <form class="confirmation-form"> 
-            <input type="text" class="name_input" id="input-for-code">
-            <button class="btn_name_in_chat">Войти</button>
-            <p class="message-authorization"></p>
+            <form class="confirmation-form">
+              <input type="text" class="name_input" id="input-for-code">
+              <button class="btn_name_in_chat" id='come-in-chat'>Войти</button>
             </form>
+            <p class="message-authorization"></p>
           </div>
         </div>
       </div>
     </div>
-    </div>
+  </div>
   </div>
   <script type="module" src="./chat.js"></script>
-  <script type="module" src="/popup.js"></script>
+  <!-- <script type="module" src="/popup.js"></script> -->
 </body>
+
 </html>
