загрузка сообщений с сервера

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                 <div class="time__SMS"></div>
               </div>
             </template>
+            <template id="templateCompanion">
+              <div class="his__SMS message__completed">
+                <div class="text__his_SMS"></div>
+                <div class="time__SMS"></div>
+              </div>
+            </template>
             <div class="my__SMS message__completed">
               <div class="text__my_SMS">Я: Добрый день!</div>
               <div class="time__SMS">18:45</div>
