add loading history

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
     <div class='chat__main'>
 
-      <div class='massage massage-right'>
+<!--      <div class='massage massage-right'>
         <div class='massage__name'>Я</div>
         <p class='massage__text'>Добрый день </p>
         <div class='massage__time'>18:45</div>
@@ -29,7 +29,7 @@
         <div class='massage__name'>Собеседник</div>
         <p class='massage__text'>Здрартуй </p>
         <div class='massage__time '>18:45</div>
-      </div>
+      </div>-->
     </div>
 
     <div class='chat__footer'>
