Добавляет загрузку истории сообщений

--- a/chat/index.html
+++ b/chat/index.html
@@ -26,22 +26,6 @@
     </form>
   </section>
 
-  <!--
-  <div class="modal">
-    <div class="modal__content">
-      <header class="modal__header">
-        <h2 class="modal__title">Настройки</h2>
-        <button class="modal__close"></button>
-      </header>
-      <form class="modal__form" action="" method="post">
-        <label class="modal__label" for="input-nick">Имя в чате</label>
-        <input class="modal__input" id="input-nick" type="text" value="Стив">
-        <button class="modal__submit button">Подтвердить</button>
-      </form>
-    </div>
-  </div>
-  -->
-
   <template id="message-template">
     <div class="messenger__message message">
       <p class="message__nick"></p>
@@ -62,7 +46,7 @@
           <h2 class="modal__title"></h2>
           <button class="modal__close" data-close-modal></button>
         </header>
-        <form class="modal__form" method="post" action="https://26.javascript.pages.academy/keksobooking" enctype="multipart/form-data" >
+        <form class="modal__form" method="post" action="" enctype="multipart/form-data" >
           <label class="modal__label" for="input-nick"></label>
           <input class="modal__input" id="input-nick" type="text" value="">
           <button class="modal__submit button"></button>
