add new constans add changeName function

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <div class="popup-layout settings" id="settings">
       <div class="popup-wrapper">
-        <form action="" class="popup-form">
+        <form action="" class="popup-form" id="settingForm">
           <div class="header-block">
             <h3>Настройки</h3>
             <button class="close-btn" id="settingsCloseBtn"></button>
@@ -74,7 +74,7 @@
               type="text"
               class="user-field"
               placeholder="Samuel"
-              id="popup-field"
+              id="settingsPopupField"
             />
             <button type="submit" class="common-btn">-></button>
           </div>
