--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img class="chat-img" src="./images/strada.png">
             <span class="chat-detailes">Strada | Детали #1 <br/>Собственный чат</span>
             <img class="my-nik-img active" src="./images/my-nik.png">
-            <span class="my-nik-detailes active">Dmitry S</span>
+            <span class="my-nik-detailes active"></span>
             <div class="date-container">
                 <span class="date-time"></span>
                 <span class="date-day"></span>
@@ -62,6 +62,7 @@
                 </div>
             </div>
         </div>
+        
     </div>
 
     <div class="wrapper-login-box">
@@ -79,6 +80,13 @@
                         <span></span>
                         <span></span>
                         Получить код              
+                    </a>
+                    <a href="#login" class="code-instock">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        Есть код             
                     </a>
                 </div>
             </form>
