--- a/index.html
+++ b/index.html
@@ -52,25 +52,6 @@
           <p class="message__text">Добрый день!</p>
           <p class="message__delivery-time">18:45</p>
         </div>
-<!-- <div class="message message--user-me">
-          <p class="message__text">Добрый день!</p>
-          <p class="message__delivery-time">18:45</p>
-        </div>
-        <div class="message message--interlocutor">
-          <span class="message__user">Собеседник мой:</span>
-          <p class="message__text">Добрый день!</p>
-          <p class="message__delivery-time">18:45</p>
-        </div>
-        <div class="message message--interlocutor">
-          <span class="message__user">Собеседник мой:</span>
-          <p class="message__text">А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</p>
-          <p class="message__delivery-time">18:45</p>
-        </div>
-        <div class="message message--user-me message--sent">
-          <p class="message__text">Добрый день!</p>
-          <p class="message__delivery-time">18:45</p>
-        </div> -->
-
       </div>
     </div>
     <div class="texting-area">
@@ -89,11 +70,11 @@
       </div>
     </div>
 
-    <div class="modal fade-block hidden" id="modal-authorization">
+    <div class="modal fade-block hidden" id="modal-authorization" data-modal>
       <div class="modal__window">
         <div class="modal__header">
           <h1 class="title">Авторизация</h1>
-          <button class="button-close">
+          <button class="button-close" data-modal-close>
             <img
               src="./img/icons/button-close.svg"
               alt=""
