added work with websocket

--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
   </section>
 
   <template id="template-massage">
-    <div class='massage massage-right'>
+    <div class='massage massage-left'>
       <div class='massage__name'></div>
       <p class='massage__text'></p>
       <div class='massage__time'></div>
