добавление сообщений на сервер

--- a/chat.html
+++ b/chat.html
@@ -29,6 +29,7 @@
                 <div class="other_message-block">
                     <template id="template_other_message">
                         <div class="other_message-wrapper delivered-message_color">
+                            <p class="other-name-message"></p>
                             <span class="other_message_view"></span>
                             <p class="time-message"></p>
                         </div>
