--- a/index.html
+++ b/index.html
@@ -43,7 +43,31 @@
                 </div>
                 <form class="popup__form">
                     <input type="text" placeholder="" class="input__form-message popup__input">
-                    <input type="button" value=">>" class="input__form-send">
+                    <input type="submit" value=">>" class="input__form-send">
+                </form>
+            </div>
+        </div>
+
+        <div class="popup" id="popupMail">
+            <div class="popup__header">
+                <div class="header__name">
+                    <span>Авторизация</span>
+                </div>
+                <button class="popupMail__close-btn">
+                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path opacity="0.45"
+                            d="M12.4653 3.53243L13.9071 4.97427L5.63731 13.2441L4.19547 11.8023L12.4653 3.53243ZM5.5793 3.37499L14.3629 12.1586L12.8299 13.6916L4.04632 4.90798L5.5793 3.37499Z"
+                            fill="black" />
+                    </svg>
+                </button>
+            </div>
+            <div class="popup__content">
+                <div class="content__name">
+                    <span>Почта:</span>
+                </div>
+                <form class="popup__form" id="popupMailForm">
+                    <input type="text" placeholder="" class="input__form-message popup__input">
+                    <input type="submit" value=">>" class="input__form-send">
                 </form>
             </div>
         </div>
