refactor some functions

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <button class="settings-btn common-btn" id="settingsBtn">
             Настройки
           </button>
-          <button class="logout-btn common-btn">Выход</button>
+          <button class="auth-btn common-btn" id="authBtn">Выход</button>
         </div>
         <div class="message-screen">
           <ul class="message-list" id="messageList">
@@ -87,7 +87,7 @@
         <form action="" class="popup-form" id="authForm">
           <div class="header-block">
             <h3>Авторизация</h3>
-            <button class="close-btn" id="authClothBtn"></button>
+            <button class="close-btn" id="authCloseBtn"></button>
           </div>
           <div class="input-block">
             <label for="popup-field" class="popup-label">Почта </label>
