feat: add messages downloading

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         />
       </div>
       <div class="container content__wrapper">
-        <div class="message message--user-me">
+        <!-- <div class="messages-warning">
+          <p>Вся история загружена:)</p>
+        </div> -->
+        <!-- <div class="message message--user-me">
           <p class="message__text">Добрый день!</p>
           <p class="message__delivery-time">18:45</p>
         </div>
@@ -45,13 +48,16 @@
         </div>
         <div class="message message--interlocutor">
           <span class="message__user">Собеседник мой:</span>
-          <p class="message__text">А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</p>
+          <p class="message__text">
+            А это второе и, кажется, оно очень длинное, чтобы поместиться на
+            одной строке
+          </p>
           <p class="message__delivery-time">18:45</p>
         </div>
         <div class="message message--user-me message--sent">
           <p class="message__text">Добрый день!</p>
           <p class="message__delivery-time">18:45</p>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="texting-area">
@@ -111,7 +117,9 @@
         <form action="" class="input-data">
           <h2 class="subtitle">Код:</h2>
           <input class="input modal__input" placeholder="******" />
-          <div class="modal__warning hidden"><p>Поле пустое, введите код из письма!</p></div>
+          <div class="modal__warning hidden">
+            <p>Поле пустое, введите код из письма!</p>
+          </div>
           <button class="button">Войти</button>
         </form>
       </div>
@@ -133,7 +141,9 @@
         <h2 class="subtitle">Имя в чате</h2>
         <form action="" class="input-data">
           <input class="modal__input" placeholder="Стив" />
-          <div class="modal__warning hidden"><p>Поле пустое, введите имя от 2 символов!</p></div>
+          <div class="modal__warning hidden">
+            <p>Поле пустое, введите имя от 2 символов!</p>
+          </div>
           <button class="button">
             <img src="./img/icons/continue.png" alt="" height="10" width="10" />
           </button>
