feat: exit and check token

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <button class="inline-button modal-name" type="button">
             Настройки
           </button>
-          <button class="inline-button" type="button">Выйти</button>
+          <button class="inline-button inline-button-exit" type="button">Выйти</button>
         </div>
       </div>
     </div>
