add message history

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="message-screen">
           <ul class="message-list" id="messageList">
             <template id="messageTemplate">
-              <li class="message-item">
+              <div>
                 <div class="message-text"><span class="author"></span></div>
                 <div class="message-date"></div>
-              </li>
+              </div>
             </template>
-            <li class="message-item">
+            <li class="message-item user-message">
               <div class=""><span class="author">Я:</span> Добрый день!</div>
               <div class="message-date">18:45</div>
             </li>
