--- a/src/index.html
+++ b/src/index.html
@@ -13,23 +13,15 @@
   <section class='chat' >
 
     <div class='chat__header'>
+      <div class='chat__enter'>войти</div>
+
       <div class='chat__settings'>настройки</div>
+
       <div class='chat__exit'>выйти</div>
     </div>
 
     <div class='chat__main'>
 
-<!--      <div class='massage massage-right'>
-        <div class='massage__name'>Я</div>
-        <p class='massage__text'>Добрый день </p>
-        <div class='massage__time'>18:45</div>
-      </div>
-
-      <div class='massage massage-left'>
-        <div class='massage__name'>Собеседник</div>
-        <p class='massage__text'>Здрартуй </p>
-        <div class='massage__time '>18:45</div>
-      </div>-->
     </div>
 
     <div class='chat__footer'>
