--- a/Chat/index.html
+++ b/Chat/index.html
@@ -77,7 +77,7 @@
 
                     <template class="client-message">
                         <div class="interlocutor">
-                            <span class="no-select">Собеседник мой: </span><span class="client-span-message">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ducimus explicabo incidunt ipsum iusto officiis provident temporibus vel? Assumenda ipsum laboriosam modi nihil quas repellendus repudiandae saepe sequi temporibus ut!А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке </span>
+                            <span class="no-select">Собеседник мой: </span><span class="client-span-message"></span>
                             <p class="date-interlocutor no-select">22:00</p>
                         </div>
                     </template>
