--- a/chat/index.html
+++ b/chat/index.html
@@ -18,7 +18,19 @@
       <button class="messenger__exit-button button button--menu" type="button">Выйти</button>
     </div>
 
-    <div class="messenger__message-list"></div>
+    <div class="messenger__messages-wrapper">
+      <div class="messenger__message-list"></div>
+      <button class="messenger__scroll-up button" type="button" data-scroll="up">
+        <svg width="20" height="20" fill="#444444" role="img" aria-hidden="true" focusable="false">
+          <use xlink:href="./img/sprite.svg#slider-arrow-left"></use>
+        </svg>
+      </button>
+      <button class="messenger__scroll-down button" type="button" data-scroll="down">
+        <svg width="20" height="20" fill="#444444" role="img" aria-hidden="true" focusable="false">
+          <use xlink:href="./img/sprite.svg#slider-arrow-left"></use>
+        </svg>
+      </button>
+    </div>
 
     <form class="messenger__form">
       <input class="messenger__input" type="text" placeholder="Напишите что-нибудь">
@@ -47,9 +59,9 @@
           <button class="modal__close" data-close-modal></button>
         </header>
         <form class="modal__form" method="post" action="" enctype="multipart/form-data" >
-          <label class="modal__label" for="input-nick"></label>
-          <input class="modal__input" id="input-nick" type="text" value="">
-          <button class="modal__submit button"></button>
+          <label class="modal__label" for="popup-input"></label>
+          <input class="modal__input" id="popup-input" type="text" value="">
+          <button class="modal__submit button" ></button>
         </form>
       </div>
     </div>
