--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         
         <div class="container-header">
             <button class="btn btn-setting" type="button">Настройки</button>
+            <img class="connect-status" src='./images/connect-lost.png'>
             <img class="chat-img" src="./images/strada.png">
             <span class="chat-detailes">Strada | Детали #1 <br/>Собственный чат</span>
             <img class="my-nik-img active" src="./images/my-nik.png">
@@ -44,7 +45,7 @@
             </defs>
         </svg>
 
-        <form class="container-footer">
+        <form class="container-footer" disabled>
             <input class="message-input" type="text" placeholder=" Написать сообщение..." autofocus/>
             <button class="btn btn-enter" type="submit">>></button>
         </form>
