--- a/Chat/index.html
+++ b/Chat/index.html
@@ -74,7 +74,7 @@
 
             <div class="flex-end">
                 <div class="content-message">
-
+                <p class="historyLoaded"></p>
                     <template class="client-message">
                         <div class="interlocutor">
                             <span class="no-select">Собеседник мой: </span><span class="client-span-message"></span>
