--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
     <link href="./styles.css" rel="stylesheet" type="text/css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,28 +17,24 @@
                 <button type="button" id="btnSettings">Настройки</button>
                 <button type="button" id="btnAuthorization">Авт.</button>
                 <button type="button" id="btnVerification">Подтв.</button>
-                <button type="button" id="btnExit">Выйти</button>
+                <!-- <button type="button" id="btnExit">Выйти</button> -->
+                <button type="button" id="btnGetHistory">История</button>
+                <!-- <button type="button" id="btnGetInformationAbutUser">Инф</button> -->
             </div>
 
             <div id="main">
 
-                <div class="msgContainer msgReceived msgOut">
-                    <div>
-                        <span class="msgContainer-author">Я</span>:<span class="msgContainer-text">Добрый
-                            день!</span>
+                <template id="tmpl">
+                    <div class="msgContainer msgReceived msgIn">
+                        <div>
+                            <span class="msgContainer-author"></span>:<span class="msgContainer-text"
+                                id="textMsg"></span>
+                        </div>
+                        <div class="msgContainerTime">18:45</div>
                     </div>
-                    <div class="msgContainerTime">18:45</div>
-                </div>
+                </template>
 
-                <div class="msgContainer msgReceived msgIn">
-                    <div>
-                        <span class="msgContainer-author">Собеседник мой</span>:<span class="msgContainer-text">Добрый
-                            день!</span>
-                    </div>
-                    <div class="msgContainerTime">18:45</div>
-                </div>
-
-                <div class="msgContainer msgReceived msgIn">
+                <!-- <div class="msgContainer msgReceived msgIn">
                     <div>
                         <span class="msgContainer-author">Собеседник мой</span>:<span class="msgContainer-text"> А это
                             второе и, кажется, оно очень длинное, чтобы поместиться на одной строке</span>
@@ -52,7 +48,7 @@
                             день!</span>
                     </div>
                     <div class="msgContainerTime">18:45</div>
-                </div>
+                </div> -->
 
             </div>
             <form id="msgEnterForm">
@@ -104,7 +100,7 @@
                     <p>Код:</p>
                     <input type="text" name="inputCode" class="inputText height48px" placeholder="Код">
                     <input type="submit" class="sendButton height48px" value="Войти"></input>
-                    <button type="button" id="btnGetNam">Get Name</button>
+                    <!-- <button type="button" id="btnGetNam">Get Name</button> -->
                 </form>
             </div>
         </div>
