refactoring: js to ts

--- a/codeinium/index.html
+++ b/codeinium/index.html
@@ -15,5 +15,6 @@
         <span class="new-date"> </span>
     </div>
 </body>
-<script type='module' src="./main.js"></script>
+<script> var exports = {}; </script>
+<script type="module" src="./app.js"></script>
 </html>
