--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
             </div>
             <div class="popup__content">
                 <div class="content__name">
+                    <span>Текущее имя:</span>
+                    <span id="currentName"></span>
+                </div>
+                <div class="content__name">
                     <span>Имя в чате:</span>
                 </div>
-                <form class="popup__form">
-                    <input type="text" placeholder="" class="input__form-message popup__input">
+                <form class="popup__form" id="popupNameForm">
+                    <input type="text" placeholder="" class="input__form-message popup__input" id="popupNameInput">
                     <input type="submit" value=">>" class="input__form-send">
                 </form>
             </div>
@@ -66,8 +70,35 @@
                     <span>Почта:</span>
                 </div>
                 <form class="popup__form" id="popupMailForm">
-                    <input type="text" placeholder="" class="input__form-message popup__input">
+                    <input type="text" placeholder="" class="input__form-email popup__input">
                     <input type="submit" value=">>" class="input__form-send">
+                </form>
+            </div>
+            <div class="popup__content">
+                <button class="auth__button" id="authButton">У меня есть код подтверждения</button>
+            </div>
+        </div>
+
+        <div class="popup popup__hidden" id="popupAuth">
+            <div class="popup__header">
+                <div class="header__name">
+                    <span>Подтверждение</span>
+                </div>
+                <button class="popupMail__close-btn">
+                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path opacity="0.45"
+                            d="M12.4653 3.53243L13.9071 4.97427L5.63731 13.2441L4.19547 11.8023L12.4653 3.53243ZM5.5793 3.37499L14.3629 12.1586L12.8299 13.6916L4.04632 4.90798L5.5793 3.37499Z"
+                            fill="black" />
+                    </svg>
+                </button>
+            </div>
+            <div class="popup__content">
+                <div class="content__name">
+                    <span>Код подтверждения</span>
+                </div>
+                <form class="popup__form" id="popupTokenForm">
+                    <input type="text" placeholder="" id="popupTokenInput" class="input__form-email popup__input">
+                    <input type="submit" value=">>" class="input__form-token">
                 </form>
             </div>
         </div>
@@ -147,7 +178,7 @@
     </div>
 
     <template id="template">
-        <span>Я: </span>
+        <span class="meOrNotMe">Я: </span>
         <span class="message__text">Добрый день!</span>
         <div class="time">
             <span class="hours">18</span>
@@ -159,6 +190,7 @@
     <script src="ui.js" type="module"></script>
     <script src="popup.js" type="module"></script>
     <script src="main.js" type="module"></script>
+    <script src="ws.js" type="module"></script>
 </body>
 
 </html>
