изменения полсе ревью емае...

--- a/chat.html
+++ b/chat.html
@@ -14,7 +14,7 @@
         <div class="main-block">
             <div class="configuration-wrapper">
                 <button class="btn-settings">Настройки</button>
-                <p class="companion-name"></p>
+                <button class="best-smile-ever">😔</button>
                 <button class="btn-exit">Выйти</button>
             </div>
             <div class="message-window">
