An async function or method in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.

--- a/Chat/index.html
+++ b/Chat/index.html
@@ -129,8 +129,8 @@
     </div>
 </div>
 
-<script type="module" src="main.js"></script>
-<script type="module" src="authorization.js"></script>
-<script type="module" src="popup.js"></script>
+<script type="module" defer src="main.js"></script>
+<script type="module" defer src="authorization.js"></script>
+<script type="module" defer src="popup.js"></script>
 </body>
 </html>
