new version (no solid)

--- a/index.html
+++ b/index.html
@@ -70,20 +70,20 @@
           </div>
         </form>
       </div>
-      <div class="popup__bg_kod">
-        <form class="popup_kod">
-          <span class="close-popup-kod"> X </span>
+      <div class="popup__bg_code">
+        <form class="popup_code">
+          <span class="close-popup-code"> X </span>
           <span> Подтверждение </span>
 
-          <div class="kod-span">
+          <div class="code-span">
             <span> Код </span>
           </div>
 
-          <div class="kod-inp">
-            <input id="kod-input" placeholder="Введите код..." type="text" />
-            <!-- <button id="kod-button">
+          <div class="code-inp">
+            <input id="code-input" placeholder="Введите код..." type="text" />
+            <button id="code-button">
               <span> -> </span>
-            </button> -->
+            </button>
           </div>
         </form>
       </div>
@@ -111,7 +111,7 @@
         </div>
       </div>
     </template>
-    <script type="module" src="./popup.js"></script>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./ts_app/popup.js"></script>
+    <script type="module" src="./ts_app/main.js"></script>
   </body>
 </html>
