Added Infinite scroll

--- a/chat/index.html
+++ b/chat/index.html
@@ -14,105 +14,7 @@
 				<button class="header__exit">Выйти</button>
 			</nav>
 			<main class="content">
-				<div class="content__chat">
-					<!-- <div class="content__me message">
-						<div class="content__message">
-							<p>
-								Я: Добрый день!
-								аааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааа
-							</p>
-							<div class="content__time">
-								<span>18:45</span>
-							</div>
-						</div>
-					</div> -->
-					<!-- <div class="content__companion message">
-						<div class="content__message">
-							<p>Собеседник мой: Добрый день!</p>
-							<div class="content__time">
-								<span>18:45</span>
-							</div>
-						</div>
-					</div>
-					<div class="content__companion message">
-						<div class="content__message">
-							<p>
-								Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на
-								одной строке
-							</p>
-							<div class="content__time">
-								<span>18:45</span>
-							</div>
-						</div>
-					</div>
-					<div class="content__me message">
-						<div class="content__message">
-							<p>Я: Добрый день!</p>
-							<div class="content__time">
-								<span>18:45</span>
-							</div>
-						</div>
-					</div>
-					<div class="content__me message">
-						<div class="content__message">
-							<p>Я: Добрый день!</p>
-							<div class="content__time">
-								<span>18:45</span>
-							</div>
-						</div>
-					</div>
-					<div class="content__companion message">
-						<div class="content__message">
-							<p>Собеседник мой: Добрый день!</p>
-							<div class="content__time">
-								<span>18:45</span>
-							</div>
-						</div>
-					</div>
-					<div class="content__companion message">
-						<div class="content__message">
-							<p>
-								Собеседник мой: А это второе и, кажется, оно очень длинное, чтобы поместиться на
-								одной строке
-							</p>
-							<div class="content__time">
-								<span>18:45</span>
-							</div>
-						</div>
-					</div>
-					<div class="content__me message">
-						<div class="content__message">
-							<p>Я: Добрый день!</p>
-							<div class="content__time">
-								<span>18:45</span>
-							</div>
-						</div>
-					</div>
-					<div class="content__me message">
-						<div class="content__message">
-							<p>Я: Добрый день!</p>
-							<div class="content__time">
-								<span>18:45</span>
-							</div>
-						</div>
-					</div>
-					<div class="content__me message">
-						<div class="content__message">
-							<p>Я: Добрый день!</p>
-							<div class="content__time">
-								<span>18:45</span>
-							</div>
-						</div>
-					</div>
-					<div class="content__me message">
-						<div class="content__message">
-							<p>Я: Добрый день!</p>
-							<div class="content__time">
-								<span>18:45</span>
-							</div>
-						</div>
-					</div> -->
-				</div>
+				<div class="content__chat"></div>
 			</main>
 			<form class="chat-form">
 				<input class="send-message" type="text" placeholder="Написать..." name="" id="" />
