--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             </div>
         </div>
 
+
+
         <div class="popup" id="popupMail">
             <div class="popup__header">
                 <div class="header__name">
@@ -104,69 +106,17 @@
         </div>
 
         <div class="chat">
-            <!-- <div class="message">
-                <span>Собеседник мой: </span>
-                <span>А это второе и, кажется, оно очень
-                    длинное, чтобы поместиться на
-                    одной строке
-                </span>
-                <div class="time">
-                    <span class="hours">18</span>
-                    <span>:</span>
-                    <span class="minutes">45</span>
-                </div>
-            </div>
-            <div class="message">
-                <span>Собеседник мой: </span>
-                <span>А это второе и, кажется, оно очень
-                    длинное, чтобы поместиться на
-                    одной строке
-                </span>
-                <div class="time">
-                    <span class="hours">18</span>
-                    <span>:</span>
-                    <span class="minutes">45</span>
-                </div>
-            </div>
 
-
-            <div class="message my sent">
-                <span>Я: </span>
-                <span>Добрый день!</span>
-                <div class="time">
-                    <span class="hours">18</span>
-                    <span>:</span>
-                    <span class="minutes">45</span>
-                </div>
-            </div>
-            <div class="message">
-                <span>Собеседник мой: </span>
-                <span>А это второе и, кажется, оно очень длинное, чтобы поместиться на одной строке
-                </span>
-                <div class="time">
-                    <span class="hours">18</span>
-                    <span>:</span>
-                    <span class="minutes">45</span>
-                </div>
-            </div>
-            <div class="message">
-                <span>Собеседник мой: </span>
-                <span>Добрый день!</span>
-                <div class="time">
-                    <span class="hours">18</span>
-                    <span>:</span>
-                    <span class="minutes">45</span>
-                </div>
-            </div>
-            <div class="message my">
-                <span>Я: </span>
-                <span>Добрый день!</span>
-                <div class="time">
-                    <span class="hours">18</span>
-                    <span>:</span>
-                    <span class="minutes">45</span>
-                </div>
-            </div> -->
+        </div>
+        <div class="toTheBeginingButtonHolder popup__hidden" id="toTheBeginingButtonHolder">
+            <button class="toTheBeginingButton">
+                <svg width="30" height="32" xmlns="http://www.w3.org/2000/svg">
+                    <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_4" y2="20.281228"
+                        x2="14.537502" y1="11.281274" x1="5.412549" stroke-width="1.5" stroke="#000" fill="none" />
+                    <line stroke="#000" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_5" y2="20.281228"
+                        x2="13.537507" y1="11.281274" x1="22.662462" stroke-width="1.5" fill="none" />
+                </svg>
+            </button>
         </div>
 
         <div class="input">
