Ref with typeScript

--- a/chat/index.html
+++ b/chat/index.html
@@ -85,5 +85,5 @@
 			</div>
 		</div>
 	</body>
-	<script type="module" src="./src/js/index.js"></script>
+	<script type="module" src="./src/ts/index.js"></script>
 </html>
