add scroll fuction

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </button>
           <button class="auth-btn common-btn" id="authBtn">Выход</button>
         </div>
-        <div class="message-screen">
+        <div class="message-screen" id="messageScreen">
           <ul class="message-list" id="messageList">
             <template id="messageTemplate">
               <div>
